fix missing \end

--- a/work3/report/2-data/1-dataset.tex
+++ b/work3/report/2-data/1-dataset.tex
@@ -57,7 +57,7 @@ We selected the Mushroom, Hepatitis, and Vowel datasets to provide complementary
 \begin{itemize}
     \item \textbf{Dataset size variation} (small, medium, large)
     \item \textbf{Attribute type diversity} (nominal, numerical, mixed)
-  
+\end{itemize}
 
 
 
