Added introduction and evaluation metrics

--- a/work3/report/1-introduction.tex
+++ b/work3/report/1-introduction.tex
@@ -1,18 +1,5 @@
 \section{Introduction}
 \label{sec:introduction}
 
-\subsection{Background}
 
-\subsection{Research Objectives}
-
-
-\begin{enumerate}
-    \item 
-\end{enumerate}
-
-\subsection{Methodology Overview}
-
-\begin{itemize}
-    \item 
-\end{itemize}
-
+This report focuses on evaluating various clustering techniques across three distinct datasets: Mushroom, Vowel, and Hepatitis, as detailed in Section \ref{sec:data}. The clustering algorithms examined include K-Means, Fuzzy K-Means, OPTICS, Spectral Clustering, Global K-Means, and GMeans, as described in Sections \ref{subsec:methods-kmeans} to \ref{subsec:methods-spectral-clustering} . We perform multiple experimental runs with different hyperparameters and assess the performance of each method using four evaluation metrics: two internal metrics (Davies-Bouldin Index and Calinski-Harabasz Index) and two external metrics (Adjusted Rand Index and F-Measure) as seen in \ref{subsec:methods-evaluation-metrics}. The results and analysis of these experiments are presented in Section \ref{sec:results-and-analysis}.
