--- a/work3/report/3-methods/methods.tex
+++ b/work3/report/3-methods/methods.tex
@@ -8,3 +8,4 @@ This section provides an overview of the clustering algorithms used in our analy
 \input{3-methods/3-fuzzy-cmeans}
 \input{3-methods/4-optics}
 \input{3-methods/5-spectral-clustering}
+\input{report/3-methods/6-evaluation-metrics}
