add optics plot

--- a/work3/report/4-results-and-analysis/4-optics-results.tex
+++ b/work3/report/4-results-and-analysis/4-optics-results.tex
@@ -1,4 +1,4 @@
 \subsection{OPTICS}
 \label{subsec:opticsresults}
 
-% Add plots here when ready
+\includegraphics[width=0.5\textwidth]{figures/interactions_optics.png}
