--- a/work3/report/3-methods/1-kmeans.tex
+++ b/work3/report/3-methods/1-kmeans.tex
@@ -32,8 +32,8 @@ K-Means is computationally efficient but sensitive to the initial positions of c
 K-Means involves several important parameters, which include:
 
 \begin{itemize}
-    \item \textbf{Number of Clusters (\(n_{\text{clusters}}\))}: Determines the number of clusters (\(k\)) to form.
-    \item \textbf{Maximum Iterations (\(max_{\text{iterations}}\))}: The maximum number of iterations allowed for convergence.
+    \item \textbf{Number of Clusters}: Determines the number of clusters (\(k\)) to form.
+    \item \textbf{Maximum Iterations}: The maximum number of iterations allowed for convergence.
     \item \textbf{Tolerance (\(\epsilon\))}: The convergence threshold based on the change in centroids.
     \item \textbf{Random State}: Controls the random seed for reproducibility of results.
 \end{itemize}
@@ -47,8 +47,8 @@ The parameter variations used in our experiments are summarized in Table~\ref{ta
 \begin{tabularx}{\columnwidth}{|X|X|}
 \hline
 \textbf{Parameter} & \textbf{Values} \\ \hline
-Number of Clusters (\(n_{\text{clusters}}\)) & 2, 3, 4, 5, 6, 8, 10 \\ \hline
-Maximum Iterations (\(max_{\text{iterations}}\)) & 100, 300, 500 \\ \hline
+Number of Clusters  & 2, 3, 4, 5, 6, 8, 10 \\ \hline
+Maximum Iterations & 100, 300, 500 \\ \hline
 Tolerance (\(\epsilon\)) & \(1 \times 10^{-5}, 1 \times 10^{-4}, 1 \times 10^{-3}\) \\ \hline
 Random State & 1, 2, 3, 4, 5 \\ \hline
 \end{tabularx}
