add best configs tables

--- a/work3/report/6-appendix.tex
+++ b/work3/report/6-appendix.tex
@@ -1,2 +1,11 @@
 \section{Appendix}
 \label{sec:appendix}
+
+\input{tables/best_models_overall.tex}
+
+\input{tables/best_configs_kmeans.tex}
+\input{tables/best_configs_gmeans.tex}
+\input{tables/best_configs_global_kmeans.tex}
+\input{tables/best_configs_fuzzy_cmeans.tex}
+\input{tables/best_configs_optics.tex}
+\input{tables/best_configs_spectral_clustering.tex}
