--- a/work3/report/tables/best_models_overall.tex
+++ b/work3/report/tables/best_models_overall.tex
@@ -1,6 +1,11 @@
+\begin{table*}[ht!]
+\caption{Best Performing Models by Dataset (Based on F-Measure)}
+\label{tab:best_models_overall}
 \begin{tabular}{llrrrrr}
-Dataset & Model & F Measure & Ari & Chi & Dbi & Runtime (s) \\
-hepatitis & global_kmeans & 0.7122 & 0.2555 & 36.5479 & 1.9827 & 0.0625 \\
+Dataset & Model & F Measure & Ari & Chi & Dbi & Runtime (s) \\\midrule
+
+hepatitis & global\_kmeans & 0.7122 & 0.2555 & 36.5479 & 1.9827 & 0.0625 \\
 mushroom & kmeans & 0.9434 & 0.7881 & 1070.0670 & 2.6995 & 0.3844 \\
-vowel & spectral_clustering & 0.1701 & 0.0438 & 19.2650 & 4.8690 & 0.0268 \\
+vowel & spectral\_clustering & 0.1701 & 0.0438 & 19.2650 & 4.8690 & 0.0268 \\
 \end{tabular}
+\end{table*}
