--- a/work3/report/tables/top_models_hepatitis.tex
+++ b/work3/report/tables/top_models_hepatitis.tex
@@ -1,13 +1,18 @@
+\begin{table*}[ht!]
+\caption{Top 10 Configurations for Hepatitis Dataset}
+\label{tab:top_models_hepatitis}
 \begin{tabular}{rlrrrrr}
- & Model & F Measure & Ari & Chi & Dbi & Runtime (s) \\
-1 & global_kmeans & 0.712228 & 0.255480 & 36.547939 & 1.982707 & 0.063593 \\
+ & Model & F Measure & Ari & Chi & Dbi & Runtime (s) \\\midrule
+
+1 & global\_kmeans & 0.712228 & 0.255480 & 36.547939 & 1.982707 & 0.063593 \\
 2 & kmeans & 0.712228 & 0.255480 & 36.547939 & 1.982707 & 0.003378 \\
-3 & global_kmeans & 0.712228 & 0.255480 & 36.547939 & 1.982707 & 0.062399 \\
-4 & global_kmeans & 0.712228 & 0.255480 & 36.547939 & 1.982707 & 0.062316 \\
-5 & global_kmeans & 0.712228 & 0.255480 & 36.547939 & 1.982707 & 0.062883 \\
-6 & global_kmeans & 0.712228 & 0.255480 & 36.547939 & 1.982707 & 0.062535 \\
-7 & global_kmeans & 0.712228 & 0.255480 & 36.547939 & 1.982707 & 0.062852 \\
+3 & global\_kmeans & 0.712228 & 0.255480 & 36.547939 & 1.982707 & 0.062399 \\
+4 & global\_kmeans & 0.712228 & 0.255480 & 36.547939 & 1.982707 & 0.062316 \\
+5 & global\_kmeans & 0.712228 & 0.255480 & 36.547939 & 1.982707 & 0.062883 \\
+6 & global\_kmeans & 0.712228 & 0.255480 & 36.547939 & 1.982707 & 0.062535 \\
+7 & global\_kmeans & 0.712228 & 0.255480 & 36.547939 & 1.982707 & 0.062852 \\
 8 & kmeans & 0.712228 & 0.255480 & 36.547939 & 1.982707 & 0.003291 \\
 9 & kmeans & 0.712228 & 0.255480 & 36.547939 & 1.982707 & 0.003323 \\
 10 & kmeans & 0.712228 & 0.255480 & 36.547939 & 1.982707 & 0.003321 \\
 \end{tabular}
+\end{table*}
