--- a/work3/report/tables/top_models_mushroom.tex
+++ b/work3/report/tables/top_models_mushroom.tex
@@ -1,5 +1,9 @@
+\begin{table*}[ht!]
+\caption{Top 10 Configurations for Mushroom Dataset}
+\label{tab:top_models_mushroom}
 \begin{tabular}{rlrrrrr}
- & Model & F Measure & Ari & Chi & Dbi & Runtime (s) \\
+ & Model & F Measure & Ari & Chi & Dbi & Runtime (s) \\\midrule
+
 1 & kmeans & 0.943411 & 0.788051 & 1070.067042 & 2.699493 & 0.398979 \\
 2 & kmeans & 0.943411 & 0.788051 & 1070.067042 & 2.699493 & 0.398254 \\
 3 & kmeans & 0.943411 & 0.788051 & 1070.067042 & 2.699493 & 0.384385 \\
@@ -9,5 +13,6 @@
 7 & kmeans & 0.943411 & 0.788051 & 1070.067042 & 2.699493 & 0.384201 \\
 8 & kmeans & 0.943411 & 0.788051 & 1070.067042 & 2.699493 & 0.401381 \\
 9 & kmeans & 0.943411 & 0.788051 & 1070.067042 & 2.699493 & 0.392932 \\
-10 & fuzzy_cmeans & 0.931844 & 0.748343 & 1072.226462 & 2.683925 & 0.196777 \\
+10 & fuzzy\_cmeans & 0.931844 & 0.748343 & 1072.226462 & 2.683925 & 0.196777 \\
 \end{tabular}
+\end{table*}
